--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.18.1",
 		"@typescript-eslint/parser": "^8.18.1",
 		"eslint": "^9.17.0",
+		"jsdom": "^27.3.0",
 		"turbo": "^2.3.3",
 		"typescript": "^5.7.2",
 		"unplugin-swc": "^1.5.9",
