--- a/shared/db/package.json
+++ b/shared/db/package.json
@@ -11,12 +11,15 @@
 		"lint": "eslint src",
 		"lint:fix": "eslint src --fix",
 		"clean": "rm -rf dist",
-		"migrate": "tsx src/migrate.ts"
+		"migrate": "tsx src/migrate.ts",
+		"seed": "tsx src/seed.ts"
 	},
 	"dependencies": {
+		"bcrypt": "^6.0.0",
 		"pg": "^8.16.3"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^6.0.0",
 		"@types/node": "^22.10.2",
 		"@types/pg": "^8.16.0",
 		"tsx": "^4.19.2",
