Document OAuth proxy architecture (nginx vs frontend)
Add comments explaining the dual OAuth routing setup:
- nginx.conf: Routes /oauth/* directly to API in docker-compose
- frontend/src/index.ts: Proxy routes for local development only

This clarifies that there's no double-proxying in production - nginx
routes directly to API. The frontend proxy exists to support running
`pnpm dev` without the full docker-compose stack.

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,10 @@ http {
 			proxy_set_header X-Forwarded-Proto $scheme;
 		}
 
-		# Route OAuth API endpoints to API service (not /oauth/consent which is SPA)
+		# Route OAuth API endpoints directly to API service
+		# Note: frontend/src/index.ts also has proxy routes for these endpoints,
+		# but those are only used in local development (without docker-compose).
+		# In docker-compose, nginx routes directly to API for efficiency.
 		location /oauth/authorize {
 			proxy_pass http://api;
 			proxy_set_header Host $host;
