Use workflow_run trigger instead of polling action
- CD now triggers after CI completes (native GitHub feature)
- Removed lewagon/wait-on-check-action (Ruby bloat)
- Removed 5-minute debounce sleep (no longer needed)
- CD only runs if CI succeeded
- Still checks if commit is latest before deploying

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,12 +1,10 @@
 name: CD
 
 on:
-  push:
+  workflow_run:
+    workflows: ["CI"]
+    types: [completed]
     branches: [main]
-    paths-ignore:
-      - 'docs/**'
-      - '**/*.md'
-      - '.github/workflows/ci.yml'
   workflow_dispatch:
 
 concurrency:
@@ -17,65 +15,46 @@ env:
   AWS_REGION: us-west-2
 
 jobs:
-  debounce:
-    name: Debounce
+  check:
+    name: Check
     runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success'
     outputs:
       should_deploy: ${{ steps.check.outputs.should_deploy }}
+      sha: ${{ steps.check.outputs.sha }}
     steps:
-      - name: Wait 5 minutes
+      - name: Get commit SHA
+        id: sha
         run: |
-          echo "Waiting 5 minutes to debounce rapid pushes..."
-          sleep 300
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "sha=${{ github.sha }}" >> $GITHUB_OUTPUT
+          else
+            echo "sha=${{ github.event.workflow_run.head_sha }}" >> $GITHUB_OUTPUT
+          fi
 
       - name: Check if still latest commit
         id: check
         run: |
-          RESPONSE=$(curl -sf -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/${{ github.repository }}/commits/main")
+          SHA="${{ steps.sha.outputs.sha }}"
+          echo "sha=$SHA" >> $GITHUB_OUTPUT
 
-          if [ $? -ne 0 ]; then
-            echo "Failed to fetch latest commit, proceeding anyway"
-            echo "should_deploy=true" >> $GITHUB_OUTPUT
-            exit 0
-          fi
+          LATEST=$(curl -sf -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/commits/main" | jq -r '.sha')
 
-          LATEST=$(echo "$RESPONSE" | jq -r '.sha')
-
-          if [ -z "$LATEST" ] || [ "$LATEST" = "null" ]; then
-            echo "Failed to parse SHA, proceeding anyway"
-            echo "should_deploy=true" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-
-          echo "This commit: ${{ github.sha }}"
+          echo "This commit: $SHA"
           echo "Latest:      $LATEST"
 
-          if [ "${{ github.sha }}" = "$LATEST" ]; then
+          if [ "$SHA" = "$LATEST" ]; then
             echo "should_deploy=true" >> $GITHUB_OUTPUT
           else
             echo "Newer commits exist, skipping"
             echo "should_deploy=false" >> $GITHUB_OUTPUT
           fi
 
-  wait-for-ci:
-    name: Wait for CI
-    runs-on: ubuntu-latest
-    needs: debounce
-    if: needs.debounce.outputs.should_deploy == 'true'
-    steps:
-      - name: Wait for CI
-        uses: lewagon/wait-on-check-action@v1.3.4
-        with:
-          ref: ${{ github.sha }}
-          check-name: 'Build Images / Build Images'
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          wait-interval: 10
-          allowed-conclusions: success,skipped
-
   build-push:
     name: Build and Push
-    needs: wait-for-ci
+    needs: check
+    if: needs.check.outputs.should_deploy == 'true'
     permissions:
       id-token: write
       contents: read
