Disable provenance attestations for ECR compatibility

--- a/.github/workflows/_build-images.yml
+++ b/.github/workflows/_build-images.yml
@@ -63,6 +63,7 @@ jobs:
             ${{ steps.prefix.outputs.value }}/api:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          provenance: false
 
       - name: Build Frontend image
         uses: docker/build-push-action@v6
@@ -75,6 +76,7 @@ jobs:
             ${{ steps.prefix.outputs.value }}/frontend:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          provenance: false
 
       - name: Build MCP image
         uses: docker/build-push-action@v6
@@ -87,3 +89,4 @@ jobs:
             ${{ steps.prefix.outputs.value }}/mcp:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          provenance: false
