Add markdown serialization with error handling and file persistence
- Add fromMarkdown() to convert markdown to Slate AST using remark
- Add toMarkdown() to convert Slate AST back to markdown
- Support all common elements: headings, lists, code blocks, tables, links
- Add 45 unit tests for serialization round-trips
- Add user-friendly error handling for file load failures with telemetry
- Persist selected file to localStorage for page refresh restoration
- Add table rendering support in MarkdownEditor

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -26,6 +26,7 @@ COPY shared/models/package.json ./shared/models/
 COPY shared/router/package.json ./shared/router/
 COPY shared/fetch/package.json ./shared/fetch/
 COPY shared/telemetry/package.json ./shared/telemetry/
+COPY shared/pages/package.json ./shared/pages/
 COPY web/package.json ./web/
 COPY ssg/package.json ./ssg/
 
