--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
 			"@doc-platform/router": ["./shared/router/src"],
 			"@doc-platform/fetch": ["./shared/fetch/src"],
 			"@shared/planning": ["./shared/planning"],
-			"@shared/pages": ["./shared/pages"]
+			"@doc-platform/pages": ["./shared/pages"]
 		}
 	},
 	"exclude": ["node_modules", "dist"]
