Fix: add path mapping for core/* and prevent stray compiled files
- Add @doc-platform/core/* path mapping for subpath imports (e.g., /cookies)
- Add local .gitignore to shared/core to ignore compiled output in src/

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 		"baseUrl": ".",
 		"paths": {
 			"@doc-platform/core": ["./shared/core/src"],
+			"@doc-platform/core/*": ["./shared/core/src/*"],
 			"@doc-platform/ui": ["./shared/ui/src"],
 			"@doc-platform/platform": ["./shared/platform/src"],
 			"@doc-platform/platform-electron": ["./shared/platform-electron/src"],
