Containerized dev environment with hot reloading
- Use Node 22 with native TypeScript support (--experimental-transform-types)
- All development runs in Docker containers with hot reload
- Vite HMR works through nginx proxy
- Shared CSS bundle moved to shared/styles/common.css
- Production and SSG builds verified working
- Add babel decorator plugin for TC39 decorators in models

--- a/shared/auth/tsconfig.json
+++ b/shared/auth/tsconfig.json
@@ -2,7 +2,14 @@
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"outDir": "./dist",
-		"rootDir": "./src"
+		"rootDir": "./src",
+		"baseUrl": "../..",
+		"paths": {
+			"@doc-platform/core": ["./shared/core/src"],
+			"@doc-platform/core/*": ["./shared/core/src/*"],
+			"@doc-platform/db": ["./shared/db/src"],
+			"@doc-platform/db/*": ["./shared/db/src/*"]
+		}
 	},
 	"include": ["src"]
 }
