--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@typescript-eslint/parser": "^8.18.1",
 		"eslint": "^9.17.0",
 		"jsdom": "^27.3.0",
+		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.7.2",
 		"unplugin-swc": "^1.5.9",
 		"vitest": "^2.1.8"
