--- a/shared/auth/package.json
+++ b/shared/auth/package.json
@@ -3,14 +3,12 @@
 	"version": "0.0.1",
 	"private": true,
 	"type": "module",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
+	"exports": {
+		".": "./src/index.ts"
+	},
 	"scripts": {
-		"build": "tsc",
-		"dev": "tsc --watch",
 		"lint": "eslint src",
-		"lint:fix": "eslint src --fix",
-		"clean": "rm -rf dist"
+		"lint:fix": "eslint src --fix"
 	},
 	"dependencies": {
 		"@doc-platform/db": "workspace:*",
