--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,14 @@
 		"paths": {
 			"@doc-platform/core": ["./shared/core/src"],
 			"@doc-platform/core/*": ["./shared/core/src/*"],
+			"@doc-platform/db": ["./shared/db/src"],
+			"@doc-platform/db/*": ["./shared/db/src/*"],
+			"@doc-platform/auth": ["./shared/auth/src"],
+			"@doc-platform/auth/*": ["./shared/auth/src/*"],
+			"@doc-platform/email": ["./shared/email/src"],
+			"@doc-platform/email/*": ["./shared/email/src/*"],
+			"@doc-platform/telemetry": ["./shared/telemetry/src"],
+			"@doc-platform/telemetry/*": ["./shared/telemetry/src/*"],
 			"@doc-platform/ui": ["./shared/ui/src"],
 			"@doc-platform/platform": ["./shared/platform/src"],
 			"@doc-platform/platform-electron": ["./shared/platform-electron/src"],
