--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
 		"slate-react": "^0.120.0"
 	},
 	"devDependencies": {
+		"@babel/plugin-proposal-decorators": "^7.28.0",
 		"@preact/preset-vite": "^2.9.3",
 		"typescript": "^5.7.2",
 		"vite": "^6.0.5"
