--- a/ssg/package.json
+++ b/ssg/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"build": "tsx src/build.ts",
+		"dev": "tsx watch src/build.ts",
 		"lint": "eslint src",
 		"lint:fix": "eslint src --fix",
 		"clean": "rm -rf dist"
