--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"main": "dist/index.js",
 	"scripts": {
-		"build": "tsc",
+		"build": "node build.mjs",
 		"dev": "tsx watch src/index.ts",
 		"start": "node dist/index.js",
 		"lint": "eslint src",
@@ -20,6 +20,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^22.10.2",
+		"esbuild": "^0.24.2",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.2"
 	}
