Fix TypeScript strict mode errors across codebase
- Add key icon to Icon component
- Add disabled prop to ToolbarButton
- Fix array index access with noUncheckedIndexedAccess
- Cast SlateContent to Descendant[] where needed
- Add guards for optional values in hooks
- Use semantic <mark> element instead of role="mark"
- Fix null vs undefined type mismatches
- Add .pnpm-store to gitignore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
 			"@doc-platform/router": ["./shared/router/src"],
 			"@doc-platform/fetch": ["./shared/fetch/src"],
 			"@shared/planning": ["./shared/planning"],
+			"@shared/projects": ["./shared/projects"],
 			"@doc-platform/pages": ["./shared/pages"]
 		}
 	},
