--- a/shared/pages/package.json
+++ b/shared/pages/package.json
@@ -11,6 +11,7 @@
 		"test": "vitest run"
 	},
 	"devDependencies": {
+		"@types/is-hotkey": "^0.1.10",
 		"vitest": "^2.1.9"
 	},
 	"dependencies": {
