--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.9.3",
+		"@types/is-hotkey": "^0.1.10",
 		"typescript": "^5.7.2",
 		"vite": "^6.0.5"
 	}
