Add dev target to MCP Dockerfile for containerized development
- Add dev stage using tsx for hot reloading (matches API pattern)
- Add dev target and volume mounts to docker-compose.yml for MCP
- Update mcp/tsconfig.json with build settings for production builds
- Production build now works with tsc by building shared packages first

--- a/mcp/Dockerfile
+++ b/mcp/Dockerfile
@@ -1,4 +1,31 @@
-# Build stage
+# ===== DEV TARGET =====
+# Used by docker-compose for local development
+FROM node:25-alpine AS dev
+
+RUN npm install -g pnpm@9.15.1
+
+WORKDIR /app
+
+# Copy workspace config and package files
+COPY mcp/pnpm-workspace.docker.yaml ./pnpm-workspace.yaml
+COPY package.json pnpm-lock.yaml ./
+COPY shared/core/package.json ./shared/core/
+COPY shared/db/package.json ./shared/db/
+COPY mcp/package.json ./mcp/
+COPY tsconfig.json ./
+
+# Install all dependencies
+RUN pnpm install --frozen-lockfile
+
+# Download AWS RDS CA bundle for SSL certificate verification
+RUN wget -O /app/rds-ca-bundle.pem https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
+
+# Source code is mounted at runtime via docker-compose volumes
+EXPOSE 3002
+
+CMD ["pnpm", "--filter", "@doc-platform/mcp", "dev"]
+
+# ===== PRODUCTION BUILD STAGE =====
 FROM node:25-alpine AS builder
 
 # Install pnpm
