--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,8 +91,12 @@ services:
     build:
       context: .
       dockerfile: mcp/Dockerfile
+      target: dev
     ports:
       - "3002:3002"
+    volumes:
+      - .:/app:cached
+      - /app/node_modules
     environment:
       PORT: 3002
       DATABASE_URL: postgresql://dev:dev@db:5432/doc_platform
