--- a/mcp/tsconfig.json
+++ b/mcp/tsconfig.json
@@ -4,7 +4,10 @@
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
 		"target": "ES2022",
-		"types": ["node"]
+		"types": ["node"],
+		"allowImportingTsExtensions": false,
+		"outDir": "dist",
+		"rootDir": "src"
 	},
 	"include": ["src"]
 }
