--- a/shared/fetch/package.json
+++ b/shared/fetch/package.json
@@ -3,12 +3,10 @@
 	"version": "0.0.1",
 	"private": true,
 	"type": "module",
-	"main": "./dist/index.js",
-	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
-			"types": "./dist/index.d.ts",
-			"import": "./dist/index.js"
+			"types": "./src/index.ts",
+			"import": "./src/index.ts"
 		}
 	},
 	"scripts": {
