--- a/shared/pages/tsconfig.json
+++ b/shared/pages/tsconfig.json
@@ -4,5 +4,5 @@
 		"jsx": "react-jsx",
 		"jsxImportSource": "preact"
 	},
-	"include": ["**/*.ts", "**/*.tsx"]
+	"include": ["**/*.ts", "**/*.tsx", "../../global.d.ts"]
 }
