--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
 		"@swc/core": "^1.15.7",
 		"@typescript-eslint/eslint-plugin": "^8.18.1",
 		"@typescript-eslint/parser": "^8.18.1",
+		"esbuild": "^0.24.2",
 		"eslint": "^9.17.0",
 		"jsdom": "^27.3.0",
 		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.7.2",
 		"unplugin-swc": "^1.5.9",
+		"vite": "^6.0.5",
 		"vitest": "^2.1.8"
 	},
 	"dependencies": {
