Switch from pnpm to npm workspaces (#74)
* Containerized dev environment with hot reloading

- Use Node 22 with native TypeScript support (--experimental-transform-types)
- All development runs in Docker containers with hot reload
- Vite HMR works through nginx proxy
- Shared CSS bundle moved to shared/styles/common.css
- Production and SSG builds verified working
- Add babel decorator plugin for TC39 decorators in models

* Auto-build SSG on first container start, add watch mode

- Frontend container builds SSG pages if missing on startup
- Add SSG dev script with tsx watch for auto-rebuild
- Copy shared/styles in production Dockerfile
- Add .pnpm-store to gitignore

* Use entrypoint script for frontend dev container

- Move startup logic to docker-entrypoint.sh for clarity
- Properly handle SSG build on first run
- All dev servers start after SSG build completes

* Fix production build: switch frontend to esbuild bundler

- Replace tsc with esbuild for frontend production build
- Bundle workspace packages (@doc-platform/*) directly into frontend
- Remove need for separate shared package dist folders in Docker runner
- Supports .ts extension imports required by Node's native TypeScript mode

* Add typecheck scripts to all packages

- Add 'typecheck': 'tsc --noEmit' to every package
- Add root-level 'pnpm typecheck' command to check all packages
- Enable allowImportingTsExtensions in root tsconfig (for .ts imports)
- Remove rootDir/outDir from tsconfigs (not needed for noEmit)
- Update path mappings to point to source instead of dist

* Add typecheck step to CI workflow

* Fix TypeScript strict mode errors across codebase

- Add key icon to Icon component
- Add disabled prop to ToolbarButton
- Fix array index access with noUncheckedIndexedAccess
- Cast SlateContent to Descendant[] where needed
- Add guards for optional values in hooks
- Use semantic <mark> element instead of role="mark"
- Fix null vs undefined type mismatches
- Add .pnpm-store to gitignore

* Add de

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,14 +42,17 @@ services:
       context: .
       dockerfile: api/Dockerfile
       target: dev
-    command: sh -c "pnpm install && node --watch api/src/index.ts"
+    command: sh -c "npm install && node --watch api/src/index.ts"
     ports:
       - "3001:3001"
     # Anonymous /app/node_modules volume prevents host node_modules from
     # overriding container's installed dependencies.
+    # npm_cache volume persists npm cache across container rebuilds.
     volumes:
       - .:/app:cached
+      - ${HOST_PROJECT_PATH:-.}:/host/doc-platform
       - /app/node_modules
+      - npm_cache:/root/.npm
     environment:
       PORT: 3001
       DATABASE_URL: postgresql://dev:dev@db:5432/doc_platform
@@ -68,13 +71,14 @@ services:
       context: .
       dockerfile: frontend/Dockerfile
       target: dev
-    command: sh -c "pnpm install && cd web && ../node_modules/.bin/vite build && cd .. && node_modules/.bin/tsx --tsconfig ssg/tsconfig.json ssg/src/build.ts && (cd web && ../node_modules/.bin/vite --host 0.0.0.0 --port 5173 &) && node --watch frontend/src/index.ts"
+    command: sh -c "npm install && cd web && ../node_modules/.bin/vite build && cd .. && node_modules/.bin/tsx --tsconfig ssg/tsconfig.json ssg/src/build.ts && (cd web && ../node_modules/.bin/vite --host 0.0.0.0 --port 5173 &) && node --watch frontend/src/index.ts"
     ports:
       - "3000:3000"
       - "5173:5173"
     volumes:
       - .:/app:cached
       - /app/node_modules
+      - npm_cache:/root/.npm
     environment:
       PORT: 3000
       REDIS_URL: redis://redis:6379
@@ -95,12 +99,13 @@ services:
       context: .
       dockerfile: mcp/Dockerfile
       target: dev
-    command: sh -c "pnpm install && node --watch mcp/src/index.ts"
+    command: sh -c "npm install && node --watch mcp/src/index.ts"
     ports:
       - "3002:3002"
     volumes:
       - .:/app:cached
       - /app/node_modules
+      - npm_cache:/root/.npm
     environment:
       PORT: 3002
       DATABASE_URL: postgresql://dev:dev@db:5432/doc_platform
@@ -112,3 +117,4 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  npm_cache:
