Fix CD migrate path for Node 25 TypeScript execution
The Docker image uses Node 25 which runs TypeScript directly.
Changed migrate command from dist/migrate.js to src/migrate.ts.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -72,7 +72,7 @@ jobs:
     uses: ./.github/workflows/_run-ecs-task.yml
     with:
       task_name: migrate
-      command: '["node", "shared/db/dist/migrate.js"]'
+      command: '["node", "shared/db/src/migrate.ts"]'
     secrets: inherit
 
   seed:
