WIP: Doc folder selection feature scaffolding
- Add spec and plan documents for doc folder selection
- Add config module with AppConfig schema and validation
- Update shared/core exports

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"vitest": "^2.1.8"
 	},
 	"dependencies": {
+		"ignore": "^7.0.5",
 		"polyfill-symbol-metadata": "^0.0.2"
 	},
 	"overrides": {
