--- a/sync-lambda/package.json
+++ b/sync-lambda/package.json
@@ -16,6 +16,7 @@
 		"@aws-sdk/lib-storage": "^3.726.0",
 		"@doc-platform/auth": "*",
 		"@doc-platform/db": "*",
+		"isbinaryfile": "^6.0.0",
 		"unzipper": "^0.12.3"
 	},
 	"devDependencies": {
