--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -98,6 +98,7 @@ jobs:
     uses: ./.github/workflows/_deploy-cdk.yml
     with:
       action: deploy
+      bootstrap: true
     secrets: inherit
 
   deploy-services:
