--- a/shared/auth/package.json
+++ b/shared/auth/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"type": "module",
 	"exports": {
-		".": "./src/index.ts"
+		".": "./src/index.ts",
+		"./encryption": "./src/encryption.ts"
 	},
 	"scripts": {
 		"typecheck": "tsc --noEmit",
