--- a/shared/db/package.json
+++ b/shared/db/package.json
@@ -11,9 +11,7 @@
 		"lint": "eslint src",
 		"lint:fix": "eslint src --fix",
 		"migrate": "node src/migrate.ts",
-		"seed": "node seed.mjs",
-		"test": "vitest run",
-		"test:watch": "vitest"
+		"seed": "node seed.mjs"
 	},
   "dependencies": {
     "bcrypt": "^6.0.0",
