--- a/mcp/package.json
+++ b/mcp/package.json
@@ -16,8 +16,11 @@
 		"clean": "rm -rf dist"
 	},
 	"dependencies": {
+		"@doc-platform/auth": "*",
 		"@doc-platform/core": "*",
 		"@doc-platform/db": "*",
+		"@hono/node-server": "^1.19.7",
+		"hono": "^4.11.1",
 		"@modelcontextprotocol/sdk": "^1.0.0",
 		"zod": "^3.24.0"
 	},
