--- a/nginx.conf
+++ b/nginx.conf
@@ -30,8 +30,16 @@ http {
 			proxy_set_header X-Forwarded-Proto $scheme;
 		}
 
-		# OAuth consent page goes to frontend (SPA)
+		# OAuth frontend pages (SPA) - must come before /oauth/ API catch-all
 		location = /oauth/consent {
+			proxy_pass $frontend_upstream;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
+
+		location = /oauth/success {
 			proxy_pass $frontend_upstream;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
