Increase AWS role session duration to 2 hours for deploys
CDK deploy was failing at exactly 1 hour due to expired STS token.
The default role-duration-seconds is 3600s which is insufficient for
CloudFormation deployments that wait for ECS service stabilization.

--- a/.github/workflows/_deploy-cdk.yml
+++ b/.github/workflows/_deploy-cdk.yml
@@ -48,6 +48,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
+          role-duration-seconds: 7200
 
       - name: CDK ${{ inputs.action }}
         run: |
