--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -116,6 +116,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
+          role-duration-seconds: 7200
 
       - name: Deploy services
         run: |
