--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -53,7 +53,7 @@ jobs:
 
   build-push:
     name: Build and Push
-    needs: [setup-aws, check]
+    needs: check
     if: needs.check.outputs.should_deploy == 'true'
     permissions:
       id-token: write
@@ -63,9 +63,20 @@ jobs:
       push: true
     secrets: inherit
 
+  setup-aws:
+    name: Setup AWS Resources
+    needs: build-push
+    permissions:
+      id-token: write
+      contents: read
+    uses: ./.github/workflows/_deploy-cdk.yml
+    with:
+      action: deploy
+    secrets: inherit
+
   migrate:
     name: Run Migrations
-    needs: build-push
+    needs: setup-aws
     permissions:
       id-token: write
       contents: read
@@ -86,18 +97,6 @@ jobs:
       task_name: seed
       command: '["node", "shared/db/seed.mjs"]'
       include_superadmin_env: true
-    secrets: inherit
-
-  setup-aws:
-    name: Setup AWS Resources
-    needs: check
-    if: needs.check.outputs.should_deploy == 'true'
-    permissions:
-      id-token: write
-      contents: read
-    uses: ./.github/workflows/_deploy-cdk.yml
-    with:
-      action: deploy
     secrets: inherit
 
   deploy-services:
