--- a/.github/workflows/_run-ecs-task.yml
+++ b/.github/workflows/_run-ecs-task.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
+          role-duration-seconds: 7200
 
       - name: Run ${{ inputs.task_name }}
         env:
