Address PR feedback: safety fixes and correctness improvements
- Add storage to ECR image verification in prod-deploy and prod-rollback
- Fix jq "null" string handling in get-stack-outputs.sh and _deploy-cdk.yml
- Use jq for safe JSON body in release annotation (avoids shell escaping)
- Clone config in getEnvironmentConfig instead of mutating singletons
- Add environment: production to workflow jobs for GitHub environment protection
- Fix advisory lock to use dedicated client (prevents pool idle timeout release)
- Change ECR repos to RETAIN removal policy (shared with production)
- Add explicit dependency from ECS services to Target5xxAlarm construct
- Fix plan doc text (spec reference and SHA resolution wording)

--- a/.github/workflows/_deploy-cdk.yml
+++ b/.github/workflows/_deploy-cdk.yml
@@ -26,6 +26,7 @@ jobs:
   cdk:
     name: CDK ${{ inputs.action }} (${{ inputs.environment }})
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
     permissions:
       id-token: write
       contents: read
@@ -71,7 +72,7 @@ jobs:
             HOSTED_ZONE_ID=$(echo "$STAGING_OUTPUTS" | jq -r '.[] | select(.OutputKey=="HostedZoneId") | .OutputValue')
             CERT_ARN=$(echo "$STAGING_OUTPUTS" | jq -r '.[] | select(.OutputKey=="CertificateArn") | .OutputValue')
 
-            if [ -z "$HOSTED_ZONE_ID" ] || [ -z "$CERT_ARN" ]; then
+            if [ -z "$HOSTED_ZONE_ID" ] || [ "$HOSTED_ZONE_ID" = "null" ] || [ -z "$CERT_ARN" ] || [ "$CERT_ARN" = "null" ]; then
               echo "ERROR: Cannot resolve shared resources from staging stack."
               echo "Ensure DocPlatformStack is deployed before deploying production."
               exit 1
