--- a/.github/workflows/_run-ecs-task.yml
+++ b/.github/workflows/_run-ecs-task.yml
@@ -29,6 +29,7 @@ jobs:
   run:
     name: ${{ inputs.task_name }} (${{ inputs.environment }})
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
     permissions:
       id-token: write
       contents: read
