Fix OIDC trust policy for GitHub Environment-based tokens
Setting `environment:` on a GitHub Actions job changes the OIDC sub claim
from `ref:refs/heads/main` to `environment:staging`, which the trust policy
didn't allow. This caused the staging CD to fail with "Not authorized to
perform sts:AssumeRoleWithWebIdentity".

Fix: temporarily comment out `environment:` on workflow jobs and add the
environment-based sub claim patterns to the OIDC trust policy. The
environment settings can be re-enabled once this CDK change is deployed.

--- a/.github/workflows/_deploy-cdk.yml
+++ b/.github/workflows/_deploy-cdk.yml
@@ -26,7 +26,7 @@ jobs:
   cdk:
     name: CDK ${{ inputs.action }} (${{ inputs.environment }})
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment }}
+    # environment: ${{ inputs.environment }} — re-enable after OIDC trust policy includes environment patterns
     permissions:
       id-token: write
       contents: read
