Re-enable environment on workflow jobs after trust policy update
IAM trust policy was updated via CLI to accept environment-based
OIDC sub claims. Workflow jobs can now use environment: without
being blocked by the trust policy.

--- a/.github/workflows/_deploy-cdk.yml
+++ b/.github/workflows/_deploy-cdk.yml
@@ -26,7 +26,7 @@ jobs:
   cdk:
     name: CDK ${{ inputs.action }} (${{ inputs.environment }})
     runs-on: ubuntu-latest
-    # environment: ${{ inputs.environment }} — sets OIDC sub claim to environment:<name>, requires matching IAM trust policy patterns
+    environment: ${{ inputs.environment }}
     permissions:
       id-token: write
       contents: read
