Rename infrastructure from doc-platform to specboard
CDK:
- Rename doc-platform-stack.ts → specboard-stack.ts
- DocPlatformStack → SpecboardStack class/interface
- Deploy role: specboard-github-actions-deploy
- DB name: doc_platform → specboard
- ECS ARN patterns: specboard*
- PassRole: Specboard-*
- Remove ECR repo creation from CDK (repos created manually)
- Both envs use fromRepositoryName() for ECR

Environment config:
- Staging: SpecboardStaging / specboard-staging / specboard/staging
- Production: Specboard / specboard / specboard
- ECR repos: specboard/* (moved to top-level config)
- Enable storageEncrypted for staging (rebuild removes old constraint)

CI/CD:
- ECR image prefix: specboard/*
- Stack names: SpecboardStaging / Specboard
- get-stack-outputs.sh default: SpecboardStaging

--- a/.github/workflows/_build-images.yml
+++ b/.github/workflows/_build-images.yml
@@ -44,9 +44,9 @@ jobs:
         id: prefix
         run: |
           if [ "${{ inputs.push }}" = "true" ]; then
-            echo "value=${{ steps.login-ecr.outputs.registry }}/doc-platform" >> $GITHUB_OUTPUT
+            echo "value=${{ steps.login-ecr.outputs.registry }}/specboard" >> $GITHUB_OUTPUT
           else
-            echo "value=doc-platform" >> $GITHUB_OUTPUT
+            echo "value=specboard" >> $GITHUB_OUTPUT
           fi
 
       - name: Set up Docker Buildx
