--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -72,7 +72,7 @@ jobs:
           SHA="${{ needs.resolve.outputs.sha }}"
           MISSING=""
 
-          for REPO in doc-platform/api doc-platform/frontend doc-platform/mcp doc-platform/storage; do
+          for REPO in specboard/api specboard/frontend specboard/mcp specboard/storage; do
             if ! aws ecr describe-images \
               --repository-name "$REPO" \
               --image-ids imageTag="$SHA" \
@@ -140,7 +140,7 @@ jobs:
 
       - name: Deploy services
         run: |
-          source .github/scripts/get-stack-outputs.sh DocPlatformProd
+          source .github/scripts/get-stack-outputs.sh Specboard
           .github/scripts/deploy-services.sh "${{ needs.resolve.outputs.sha }}"
 
   health-check:
@@ -163,7 +163,7 @@ jobs:
 
       - name: Wait and verify health
         run: |
-          source .github/scripts/get-stack-outputs.sh DocPlatformProd
+          source .github/scripts/get-stack-outputs.sh Specboard
 
           echo "Waiting 30s for services to stabilize..."
           sleep 30
