--- a/.github/workflows/_deploy-cdk.yml
+++ b/.github/workflows/_deploy-cdk.yml
@@ -64,7 +64,7 @@ jobs:
           if [ "${{ inputs.environment }}" = "production" ]; then
             # Get shared resource IDs from staging stack outputs
             STAGING_OUTPUTS=$(aws cloudformation describe-stacks \
-              --stack-name DocPlatformStack \
+              --stack-name SpecboardStaging \
               --query "Stacks[0].Outputs" \
               --output json \
               --region "$AWS_REGION")
@@ -74,7 +74,7 @@ jobs:
 
             if [ -z "$HOSTED_ZONE_ID" ] || [ "$HOSTED_ZONE_ID" = "null" ] || [ -z "$CERT_ARN" ] || [ "$CERT_ARN" = "null" ]; then
               echo "ERROR: Cannot resolve shared resources from staging stack."
-              echo "Ensure DocPlatformStack is deployed before deploying production."
+              echo "Ensure SpecboardStaging is deployed before deploying production."
               exit 1
             fi
 
@@ -111,9 +111,9 @@ jobs:
         id: stack
         run: |
           if [ "${{ inputs.environment }}" = "production" ]; then
-            echo "name=DocPlatformProd" >> $GITHUB_OUTPUT
+            echo "name=Specboard" >> $GITHUB_OUTPUT
           else
-            echo "name=DocPlatformStack" >> $GITHUB_OUTPUT
+            echo "name=SpecboardStaging" >> $GITHUB_OUTPUT
           fi
 
       - name: Output Stack Info
